Add create table route
